[package]
name = "nimbus"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = "0.2"
glam = "0.22"
image = { version = "0.24.5", default-features = false, features = ["png", "jpeg"] }
cfg-if = "1"
asefile = "0.3.5"
notify = { version = "5.1.0", optional = true }
rodio = "0.17.1"
winit = { version= "0.28.1", optional = true }
sdl2 = { optional = true, features = ["raw-window-handle"], git = "https://github.com/Rust-SDL2/rust-sdl2", rev = "ffa4eb0" }
gilrs = { optional = true, version = "0.10.2" }
instant = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.7.3"
wgpu = "0.16.0"
guillotiere = "0.6.2"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
raw-window-handle = "0.5.2"

egui_winit_platform  = { version ="0.18.0", optional = true }
egui_wgpu_backend = { version="0.23.0", optional=true }
egui = { version ="0.21.0", optional=true}
egui_inspect = { path = "../egui_inspect/egui_inspect/", optional=true }
tobj = "4.0.0"
yakui-winit = { path = "../yakui/crates/yakui-winit" }
yakui-wgpu = { path = "../yakui/crates/yakui-wgpu" }
yakui = { path = "../yakui/crates/yakui" }

[features]
default = ["winit", "hot-reloading", "egui"]
winit=["dep:winit", "dep:gilrs"]
sdl=["dep:sdl2"]
hot-reloading=["dep:notify"]
egui = ["dep:egui_winit_platform", "dep:egui", "dep:egui_wgpu_backend", "dep:egui_inspect"]



[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.17.1", default-features = false, features = ["vorbis", "flac", "wav", "wasm-bindgen"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.17"
js-sys = "0.3.61"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = "0.4.30"
instant = { version = "0.1", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
    "Response"
]}
